@@ -19,24 +19,18 @@ DIST clamav-0.97.8.tar.gz 14609966 SHA256 d872bdfd692d440bc2ade2f4e5a7befc37feb8
 DIST clamav-0.98.tar.gz 37075245 SHA256 113450537f46ed47f010a179be333a0dcd79eac13f264dce26db7aac8d52b3b6 SHA512 532f9fa2616065879b3ecace2672fad26cf3863943e0ecb8835fbed7e5907600ef50b8df820a08a6586bf77c9bf7c6e50af671f31b7c3ee372c31745a173099f WHIRLPOOL a4ee9efd09193aee7fd740dbb60acabdd4a1f6d5171a4e0fa220441457e3431bf99b27c7300ca0e3e124bb5406f65acf106fa51bfc34d87335ca83ccbc942979
 EBUILD clamav-0.97.7.ebuild 3801 SHA256 fd0ef12dc9dd422e657d6806dade1f375ed941200f4ba9c36b2e38ab91163cea SHA512 aa91a3622322878581db7de71d6eaedf59179942a73c0033a5a701bb3e73806e7770574d8ce92e647858f317a1472893bff397b37425b18d0916a8e84ad93531 WHIRLPOOL c0c23b7ab5bb144309ea3fd938432d936f9da59bcc013256d874779c959ac7ba6002b498e864c6fd1b844f1d67f070d07e378b1daef2693caa8af587116b3ccc
 EBUILD clamav-0.97.8-r2.ebuild 4088 SHA256 3152ff07715ad8ea53535f2841414a1fca924c7cbf4a47c402649e6cf84ba6ec SHA512 f33b72fe2c1d525ca60b483720e7a7b9f550ff059f298822dac0116d261599aea505b783a4db60f03b42626dbf0898227b4c815459022dfbdbf1bb144753b3ae WHIRLPOOL bc371b64265bfd226446e9b1bbc8e613c8821528731731f8f9019d1d7711d5524e3ec1da683ee96da3a5f62efc2fcb6df8a7a431b9a79e0fc11afd1cb7091a86
-EBUILD clamav-0.97.8.ebuild 3808 SHA256 b11d8491c38d0a1c0452f5c24916a763712b9c0f83013eaf75c77641158a476f SHA512 5dc3019b7bbb38128fcf7e11b3ea811eaa2f395f6fef77787183cd86e1b16ef913dca20be4bebaeaac719944ae3b6bac668242f30205ca4f268f69106e46838c WHIRLPOOL 24b1c13938cc6a26c11bbdfc3f280e56e4fca5aef4b1c64989193270ad0270f1c8c2ae31f55cd44a57a8a30cbe4151fa29a645298fe199ce2941fec30b98da21
-EBUILD clamav-0.98.ebuild 4454 SHA256 5004cb46d99b0f22314e299ef6d82895253d2f9e89032b070e0787ceb1ff382e SHA512 996d0018a6a521027201e02e6da1ffc342b310671f8a379e75b13a2faf41c502baea58cfa56746b41ac17766b3f69aec3b61e6f7d73464cbd998e19a9ff338b0 WHIRLPOOL f59b36f3bd1597a7db2a669490fd18bbb9a0300da2c873f77702c01da26202c3d73a1b447a2630ed52906c69905396f08f4ae0954ebf6be4c031fa018e8dc1f0
-MISC ChangeLog 68305 SHA256 5ebe235c44775f10c2d2bd3119d6e9618a97034f35add3700fa68f5181f44e8b SHA512 3df75609193b2fa478e51f9bf96f7c6a6569a5b70f1d2c62c7436d9aee39820fd2896807c5b8f3de32c164fae54092fe7476bccef08128f29bd4e5ec2d9b979e WHIRLPOOL 2481eb4110fde7a5e9207d26c9ec6c6161cb0c2e95f98b23886514eee70d0a55e040df4d03fc8f57713d2c24a60c84f137d6128668647fddd218bf963a2891b2
+EBUILD clamav-0.97.8.ebuild 3806 SHA256 53a6f292608f8d7eac9fac218db0754b41e2e1705ab8ebf6a161ee79e0be43e7 SHA512 a44c09bba44d56c8779a174303a734024363c21d50e9a68a0cdf613d061bd0c5bbeaf6c4046239c8c5bd302d72dc900810a9ed0966d36f22dfcb95cc24823cf3 WHIRLPOOL 769a8fc35a752dd3cbdf2b367552d9a5261e9544bd8864b0f876c8cc2443636c8e9790991f28f78057fd71a93dd937bef43629db51cbd1655662570d7881b2e5
+EBUILD clamav-0.98.ebuild 4445 SHA256 36f1955fd140dd06cd88cccc79029b5bb5a121fa85002a6f13500f43bf7c784a SHA512 90f28877771019c3a26840184b269a20a5f22519c2e77be2b49d7647e4402634fed7e273ea38f846300171c59f60c5b6b0b5daf1d4c6bf90f8d8ee20b1714a0e WHIRLPOOL 22fcd5cad02c1ff599ea686662a78deca82bd88712418b3e6897e7206f7c12c8595ddd767afe4bc141607d0601f35f1c2d3cd9b71f00ea351107b8afd16f96bb
+MISC ChangeLog 68420 SHA256 a5d55ccc9826c78ddd935cc152b417f7fb7ff9b08980b954a99fdc222366fae3 SHA512 82ad9743c3315c079ebbec0bf22f559494c28cb957c6e714750035ee750c23e6348027218ec40535e6007ffca2ceda9d24a073e3771743e6345372e72ec7b5ff WHIRLPOOL 1b7a930c25c1705dacdf4150a768b2c801c9249206d56cbe0c9cd0edb9e3ca4b6144863f0a3855794c178b4b4d31e42b7b228de8ba6e26691d3a61e20511c3b7
 MISC metadata.xml 320 SHA256 e2a8c4c8bedbffe50a126c1c7395a4d92652c2d95347b9496d54aea1f230a22d SHA512 c5bb20c993b91112d9c9e0b7bb6c116ac7f711c769084eaaacc28bc7eeb54db09c9794c6ef057747d80a08cf1502f0f688cdefc741423a38da55b2deaebd6476 WHIRLPOOL 741ff80258dee2c145d08f72f10982bd5c1fcba44ed84054cd1a33787864a7d8821b432c3246ad5a04ce11edde7d045f3eb6e056200e3bd2e8505eeea3d7277d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSVT2wAAoJEF0huFKJUZL5TXEP/i8v4aDpNCiCz+CDani5/I4A
-yp5tcvEyce4JmIdtLlzlNrI/IyZratQvdNF2jDLi8SrYFzbBwLM7itkQUw02Qwyw
-R8ZfcoT02VvJJErsZXDFl/Akm7YR09MBW0UuyQp4m8OCpOsgpn6ljvFya2vTz9Ft
-BsF06yogyVFPYaAPhHI0IR/tq8LCDHAbv/2pgbKZqKR2bhgGIF5T94l4eXarV5yr
-CVp4N0QfbkNME3CempnzSw8nAvLtH8+cDU/uuQHGNuxeav2NzBwovXGV3LVZqr5D
-i+bUgbtJFH4w8fGnifEg0Gtlbrhod6Flw8J5wd5V5UBxMQoe/yLjppL0qS3oFhzL
-SuQei5WuyJxUXkXALQk4K6vk/XDaAhWqrbrnhBDwEhQjBm5XWXiiIlFJOfX7g2Ah
-JcLe8tEFj50asArVgfsd0JhbjhMkphiPqW+aicKjyrXqNEsKsxA7vGAqZ6qYn0Jt
-NGx3JEr9QkFT3+/cKzHNriNFByPQbRcKt1FnspvXdAc/7Y/siZFRLNbJdsNSBDMc
-70XtRTYZXD2eJPAbSv40zcQSmI0MN+q3unVzxxy+wACwrw1yiqaW7yQsf9y54q3f
-NHtLT6y5bpSgOODn7JMZfVQsC5YDdJYWdn+XY8sudtbMDAmsQXJZLOYE+WjBG66Z
-FFrQg/5uL99bPSS/LlR3
-=10Gr
+iQEcBAEBCAAGBQJSmFlAAAoJECo/aRed9267dM0H/R9mxP91/dJ2uPMdyId7EcbB
+qo0La6ozqmCmJBoaLabcfj0agRoV6Gtq3Al2aLSB6LTxAnhEeSYE85VA95px+xkj
+s+/GQnirrwV5DO2IHZZaaRyrg/OcgCmvQ0L0XqEyqtDQJzBG31PAQAFPPvEcDsXe
+siV1thvoygDcG2dV+SJ1tQ+GbiDJ9NnsuLKNUYDCQr/MSCnV5E3k/LwoV/twcgne
+EwN1l9Luj/J5Fw585iDtHU2DDNB0owaxkmSch+2NgoPqFDDVsiwciG1Mlb4ThdDJ
+rVDi4/ohnaEh+AzQOi32RbxXIcMjDxzh37sB+PXsf5JC1/Qxdvpmwz8tjaq3bfM=
+=N2UB
 -----END PGP SIGNATURE-----
