@@ -4,10 +4,10 @@ DESCRIPTION=Clam Anti-Virus Scanner
 EAPI=5
 HOMEPAGE=http://www.clamav.net/
 IUSE=bzip2 clamdtop iconv ipv6 milter selinux static-libs uclibc
-KEYWORDS=~alpha ~amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~sparc-solaris ~x86-solaris
+KEYWORDS=alpha amd64 ~arm hppa ia64 ppc ppc64 sparc x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~sparc-solaris ~x86-solaris
 LICENSE=GPL-2
 RDEPEND=bzip2? ( app-arch/bzip2 ) clamdtop? ( sys-libs/ncurses ) iconv? ( virtual/libiconv ) milter? ( || ( mail-filter/libmilter mail-mta/sendmail ) ) dev-libs/libtommath >=sys-libs/zlib-1.2.2 sys-devel/libtool selinux? ( sec-policy/selinux-clamav )
 SLOT=0
 SRC_URI=mirror://sourceforge/clamav/clamav-0.98.tar.gz
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	multilib	892e597faee02a5b94eb02ab512e7622	systemd	9f063b2cc19c5e8030911372aa246c4e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=ee684186c602676b23d2a5f036ab0c56
+_md5_=1e541725a10857de3e7c69e3bcca6844
