@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile install prepare setup test
-DEPEND=python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/numpy[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/wxpython:2.9[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] sci-chemistry/molmol sci-chemistry/pymol[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] sci-chemistry/vmd >=sci-libs/bmrblib-1.0.1_pre198[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] >=sci-libs/minfx-1.0.4_pre98[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] sci-libs/scipy[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] sci-visualization/grace sci-visualization/opendx x11-libs/wxGTK:2.9[X] dev-util/scons test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost )
-DESCRIPTION=Molecular dynamics by NMR data analysis
-EAPI=5
-HOMEPAGE=http://www.nmr-relax.com/
-IUSE=python_targets_python2_7 python_single_target_python2_7 test
-KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
-LICENSE=GPL-2
-RDEPEND=python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/numpy[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/wxpython:2.9[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] sci-chemistry/molmol sci-chemistry/pymol[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] sci-chemistry/vmd >=sci-libs/bmrblib-1.0.1_pre198[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] >=sci-libs/minfx-1.0.4_pre98[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] sci-libs/scipy[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] sci-visualization/grace sci-visualization/opendx x11-libs/wxGTK:2.9[X]
-REQUIRED_USE=python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( python_single_target_python2_7 )
-SLOT=0
-SRC_URI=http://download.gna.org/relax/relax-3.1.0.src.tar.bz2
-_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	python-single-r1	4d9f916e821994a2ccdbbcfc8ac225c9	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	scons-utils	988e24b9e2e4642189b4e97c03e5ae71	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	virtualx	73cfc129b4b9ba23aed1abb10c825d86	wxwidgets	0125fdb7607a15e9047c01d27b5a6da9
-_md5_=81b7256290908f1c1faefff27eb74e93
