@@ -1,6 +1,12 @@
 # ChangeLog for sci-chemistry/relax
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/relax/ChangeLog,v 1.11 2013/11/29 08:38:42 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/relax/ChangeLog,v 1.12 2013/11/29 09:14:58 jlec Exp $
+
+*relax-3.1.0-r1 (29 Nov 2013)
+
+  29 Nov 2013; Justin Lecher <jlec@gentoo.org> -relax-3.1.0.ebuild,
+  +relax-3.1.0-r1.ebuild:
+  Fix icons
 
 *relax-3.1.0 (29 Nov 2013)
 
