@@ -1,6 +1,9 @@
 # ChangeLog for app-antivirus/clamav
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.467 2013/10/09 11:28:32 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.468 2013/11/29 09:02:56 pinkbyte Exp $
+
+  29 Nov 2013; Sergey Popov <pinkbyte@gentoo.org> clamav-0.97.8.ebuild:
+  QA: set keywords according to bug #470090
 
   09 Oct 2013; Kacper Kowalik <xarthisius@gentoo.org> clamav-0.97.7.ebuild,
   clamav-0.97.8-r2.ebuild, clamav-0.97.8.ebuild, clamav-0.98.ebuild:
